resized xs padding to fit ration to top of image

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ html {
   box-sizing: inherit;
 }
 
+.protein {
+  padding-left: 10em;
+}
+
 @media only screen and (min-width: 60em) {
   .protein {
     max-width: 35.8%;
