resized carbon and iron to fit responsive website resize

--- a/css/main.css
+++ b/css/main.css
@@ -40,4 +40,12 @@ body {
   .top {
     padding-left: 7em;
   }
+
+  .iron {
+    padding-left: 10%;
+  }
+
+  .carbon {
+    padding-right: 10%;
+  }
 }
